[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-transaction-dos"
version = "1.14.178"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
solana-clap-utils = { path = "../clap-utils", version = "=1.14.178" }
solana-cli = { path = "../cli", version = "=1.14.178" }
solana-client = { path = "../client", version = "=1.14.178" }
solana-core = { path = "../core", version = "=1.14.178" }
solana-faucet = { path = "../faucet", version = "=1.14.178" }
solana-gossip = { path = "../gossip", version = "=1.14.178" }
solana-logger = { path = "../logger", version = "=1.14.178" }
solana-measure = { path = "../measure", version = "=1.14.178" }
solana-net-utils = { path = "../net-utils", version = "=1.14.178" }
solana-runtime = { path = "../runtime", version = "=1.14.178" }
solana-sdk = { path = "../sdk", version = "=1.14.178" }
solana-streamer = { path = "../streamer", version = "=1.14.178" }
solana-transaction-status = { path = "../transaction-status", version = "=1.14.178" }
solana-version = { path = "../version", version = "=1.14.178" }

[dev-dependencies]
solana-local-cluster = { path = "../local-cluster", version = "=1.14.178" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
